mdapipkg/objects/Marketing_Segmentation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Captures scores for each segment and interest combination</description>
    <fields>
        <fullName>Interest_Value__c</fullName>
        <label>Interest Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiplication_Factor__c</fullName>
        <label>Multiplication Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment_Factor__c</fullName>
        <label>Segment Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Marketing Segmentation</label>
</CustomObject>